--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <title>My Profile</title>
-        <link rel="stylesheet" href="/Styles/indexstyle.css">
-        <link rel="icon" type="image/x-icon" href="/icons/favicon.png">
+        <link rel="stylesheet" href="Styles/indexstyle.css">
+        <link rel="icon" type="image/x-icon" href="icons/favicon.png">
     </head>
     <body>
         <div class="container glass">
-            <img class="background-image" src="/Images/2454736.jpg">
+            <img class="background-image" src="Images/2454736.jpg">
             <div class="welcome">WELCOME</div>
             <div class="univ">MY UNIVERSE</div>
             <div class="options">
@@ -15,7 +15,7 @@
         
                     <a class="row1" href="index.html">
                       <div class="e1">
-                        <img class="icon" src="/icons/home-icon.png">
+                        <img class="icon" src="icons/home-icon.png">
                         <div class="links">Home</div>
                       </div>
                     </a>
