--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About me</title>
     <link rel="stylesheet" href="Styles/aboutstyle.css">
-    <link rel="icon" type="image/x-icon" href="/icons/favicon.png">
+    <link rel="icon" type="image/x-icon" href="icons/favicon.png">
 
 </head>
 <body>
