--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
   <title>Contact</title>
-  <link rel="stylesheet" href="/Styles/contactstyles.css">
-  <link rel="icon" type="image/x-icon" href="/icons/favicon.png">
+  <link rel="stylesheet" href="Styles/contactstyles.css">
+  <link rel="icon" type="image/x-icon" href="icons/favicon.png">
 </head>
 <body>
   <div class="page-container">
