--- a/education.html
+++ b/education.html
@@ -4,7 +4,7 @@
   
   <title>Education</title>
   <link rel="stylesheet" href="Styles/educationstyle.css">
-  <link rel="icon" type="image/x-icon" href="/icons/favicon.png">
+  <link rel="icon" type="image/x-icon" href="icons/favicon.png">
 
 </head>
 <body>
