--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
   <title>Projects</title>
   <link rel="stylesheet" href="Styles/projectstyle.css">
-  <link rel="icon" type="image/x-icon" href="/icons/favicon.png">
+  <link rel="icon" type="image/x-icon" href="icons/favicon.png">
 
 </head>
 <body>
