--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="image-container">
-          <img class="image" src="images/Image mine.png">
+          <img class="image" src="./Images/Image mine.png">
         </div>
       </div>
 
