--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </div>
                       </a>
               
-                      <a class="row2" href="Resume/ARIHARAN T.pdf">
+                      <a class="row2" href="./Resume/ARIHARAN T.pdf">
                         <div class="e23">
                           <img class="icon" src="icons/resume-icon.png">
                           <div class="links">Resume</div>
