--- a/projects.html
+++ b/projects.html
@@ -21,7 +21,7 @@
             data-driven recommendations.</p>
       </div>
       <div class="image">
-        <img class="photo" src="images/crop.png">
+        <img class="photo" src="Images/crop.png">
       </div>
     </div>
     
@@ -34,7 +34,7 @@
         </p>
       </div>
       <div class="image">
-        <img class="photo" src="images/ibm.png">
+        <img class="photo" src="Images/ibm.png">
       </div>
     </div>
 
@@ -46,7 +46,7 @@
         </p>
       </div>
       <div class="image">
-        <img class="photo" src="images/online shop.png">
+        <img class="photo" src="Images/online shop.png">
       </div>
     </div>
 
