--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
             <a class="links" href="https://www.linkedin.com/in/ariharan-off">
               <div class="contact-twitter">
                 <img class="icons" src="icons/twitter-logo.png">
-                Twitter
+                Linkedin
               </div>
             </a>
   
