--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
           </div>
           <div class="col2">
   
-            <a class="links" href="https://api.whatsapp.com/">
+            <a class="links" href="https://wa.me/9150626092">
               <div class="contact-whatsapp">
                 <img class="icons" src="icons/whatsapp-icon.png">  
                 Whatsapp
