--- a/education.html
+++ b/education.html
@@ -4,6 +4,7 @@
   
   <title>Education</title>
   <link rel="stylesheet" href="Styles/educationstyle.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="icons/favicon.png">
 
 </head>
