--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>My Profile</title>
         <link rel="stylesheet" href="Styles/indexstyle.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/x-icon" href="icons/favicon.png">
     </head>
     <body>
