--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 <head>
   <title>Projects</title>
   <link rel="stylesheet" href="Styles/projectstyle.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/x-icon" href="icons/favicon.png">
 
 </head>
