--- a/contact.html
+++ b/contact.html
@@ -16,28 +16,28 @@
         <div class="Contacts">
           <div class="col1">
   
-            <a class="links" href="https://instagram.com/mr_ariharan_?igshid=MzMyNGUyNmU2YQ==">
+            <a class="links" href="https://instagram.com/mr_ariharan_?igshid=MzMyNGUyNmU2YQ==" target="_blank">
               <div class="contact-instagram">
                 <img class="icons" src="icons/insta-logo.png">
                 Instagram
               </div>
             </a>
             
-            <a class="links" href="https://www.facebook.com/ariharan.ariharan.1840070?mibextid=2JQ9oc">
+            <a class="links" href="https://www.facebook.com/ariharan.ariharan.1840070?mibextid=2JQ9oc" target="_blank">
               <div class="contact-facebook">
                 <img class="icons" src="icons/facebook-logo.png">
                 Facebook
               </div>
             </a>
             
-            <a class="links" href="https://github.com/ariharan98">
+            <a class="links" href="https://github.com/ariharan98" target="_blank">
               <div class="contact-git">
                 <img class="icons" src="icons/git-logo.png">
                 Git
               </div>
             </a>
   
-            <a class="links" href="https://www.linkedin.com/in/ariharan-off">
+            <a class="links" href="https://www.linkedin.com/in/ariharan-off" target="_blank">
               <div class="contact-twitter">
                 <img class="icons" src="icons/twitter-logo.png">
                 Linkedin
@@ -47,14 +47,14 @@
           </div>
           <div class="col2">
   
-            <a class="links" href="https://wa.me/9150626092">
+            <a class="links" href="https://wa.me/9150626092" target="_blank">
               <div class="contact-whatsapp">
                 <img class="icons" src="icons/whatsapp-icon.png">  
                 Whatsapp
               </div>
             </a>
   
-            <a class="links" href="tel://9150626092">
+            <a class="links" href="tel://9150626092" target="_blank">
               <div class="contact-Phone">
                 <img class="icons" src="icons/contact-icon.png">
                 Phone
