--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me | Ariharan T</title>
-    <link rel="stylesheet" href="Styles/contactstyle.css">
+    <link rel="stylesheet" href="Styles/contactstyles.css">
     <link rel="icon" type="image/x-icon" href="icons/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
